<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MusicListCreate">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/list_create_toolbar"
            app:contentInsetStartWithNavigation="0dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="7dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/new_music_list_name_layout"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/list_name"
                    android:id="@+id/new_music_list_name"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/new_music_author_name_layout"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/new_music_author_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/author"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/new_music_cover_layout"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/new_music_cover"
                android:hint="@string/cover_edit"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_music_date_layout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/new_music_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/create_date"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/auto_generate"
                android:layout_width="wrap_content"
                android:background="?attr/colorPrimary"
                android:layout_margin="7dp"
                android:id="@+id/auto_generate"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_margin="3dp"
            android:background="?attr/colorPrimary"
            android:text="@string/save"
            android:id="@+id/new_music_list_save"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>