<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="7dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/search_cnbrass_layout"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:hint="@string/search"
                android:drawableEnd="@drawable/search_in_net"
                android:id="@+id/search_cnbrass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/search_in_net" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/begin_search"
            android:text="@string/search1"
            android:background="?attr/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp" />

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cnbrass_progress_bar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/cnbrass_text"
        android:visibility="gone"
        android:text="@string/loading"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cnbrass_find_fresh">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/cnbrass_find_recycler"
            android:layout_height="wrap_content"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
